--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body class="bg-[#0a369d] text-white">
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script>
+    <!-- O Vite irá gerar um arquivo com hash e injetar automaticamente no build -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
