--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   </head>
   <body class="bg-[#0a369d] text-white">
     <div id="root"></div>
-    <!-- O Vite irá gerar um arquivo com hash e injetar automaticamente no build -->
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- Remova o script manual aqui! -->
   </body>
 </html>
