Corrige index.html para gerar build válido do Vite

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body class="bg-[#0a369d] text-white">
     <div id="root"></div>
-    <!-- Remova o script manual aqui! -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
