--- a/index.html
+++ b/index.html
@@ -3,32 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>Mage Trump Token - Official Airdrop</title>
-
-    <!-- 🔍 SEO -->
-    <meta name="description" content="Claim your $MAGE airdrop now! Connect your wallet and earn 0.5 SOL before launch. Powered by Mage Trump Token." />
-    <meta name="keywords" content="Mage Trump Token, Solana, Airdrop, Trump Coin, Connect Wallet, crypto airdrop, Sol, SOL token, pump.fun" />
-    <meta name="author" content="Mage Trump Project" />
-
-    <!-- 🌐 Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mage-trump-token.vercel.app/" />
-    <meta property="og:title" content="Claim $MAGE – Trump Token Airdrop" />
-    <meta property="og:description" content="Connect your Solana wallet to claim 0.5 SOL and earn more with referrals. Limited time airdrop!" />
-    <meta property="og:image" content="https://mage-trump-token.vercel.app/trump-banner.png" />
-
-    <!-- 🐦 Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://mage-trump-token.vercel.app/" />
-    <meta property="twitter:title" content="Claim $MAGE – Trump Token Airdrop" />
-    <meta property="twitter:description" content="Connect your Solana wallet to claim 0.5 SOL and earn more with referrals." />
-    <meta property="twitter:image" content="https://mage-trump-token.vercel.app/trump-banner.png" />
-
-    <!-- Favicon -->
+    <title>Mage Trump Token</title>
     <link rel="icon" href="/favicon.ico" />
   </head>
   <body class="bg-[#0a369d] text-white">
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
